Update domain to arajeez-cloud.com and configure Cloudflare Tunnel ID

--- a/apps/business/payment-service/values.yaml
+++ b/apps/business/payment-service/values.yaml
@@ -18,14 +18,14 @@ ingress:
   annotations:
     konghq.com/strip-path: "true"
   hosts:
-    - host: payment.yourdomain.com
+    - host: payment.arajeez-cloud.com
       paths:
         - path: /
           pathType: Prefix
   tls:
     - secretName: payment-tls
       hosts:
-        - payment.yourdomain.com
+        - payment.arajeez-cloud.com
 
 resources:
   limits:
