--- a/clusters/prod/infra/ceph-cluster.yaml
+++ b/clusters/prod/infra/ceph-cluster.yaml
@@ -6,7 +6,7 @@ metadata:
 spec:
   project: default
   source:
-    repoURL: https://github.com/YOUR/repo.git
+    repoURL: https://github.com/Murtadah-1984/k8sgitops.git
     targetRevision: main
     path: infra/ceph
   destination:
