Add Ansible playbooks for Ceph node prep and reorganize Rook-Ceph into Helm chart
- Add Ansible inventory and playbooks for Ceph node preparation (OS prep, disk wiping, node labeling)
- Convert CephCluster from raw YAML to Helm chart (rook-ceph-cluster)
- Split Helm templates: cephcluster.yaml, cephblockpool.yaml, storageclasses.yaml, cephfs.yaml
- Update node labels from node.ceph.storage to ceph-mon/ceph-osd pattern
- Remove k8s-ceph-01, configure k8s-ceph-02 and k8s-ceph-03 with /dev/nvme0n1
- Update ArgoCD applications to use new Helm chart structure
- Add disaster recovery documentation
- Configure MON count to 1 and replication size to 2

--- a/infra/ceph/cephcluster.yaml
+++ b/infra/ceph/cephcluster.yaml
@@ -1,3 +1,9 @@
+# DEPRECATED: This file is no longer used.
+# CephCluster is now managed via Helm chart: infra/ceph/rook-ceph-cluster/
+# The ArgoCD Application ceph-cluster.yaml references the Helm chart.
+#
+# This file is kept for reference only.
+
 apiVersion: ceph.rook.io/v1
 kind: CephCluster
 metadata:
