--- a/clusters/prod/infra/ceph-cluster.yaml
+++ b/clusters/prod/infra/ceph-cluster.yaml
@@ -8,7 +8,10 @@ spec:
   source:
     repoURL: https://github.com/Murtadah-1984/k8sgitops.git
     targetRevision: main
-    path: infra/ceph
+    path: infra/ceph/rook-ceph-cluster
+    helm:
+      valueFiles:
+        - values.yaml
   destination:
     namespace: rook-ceph
     server: https://kubernetes.default.svc
@@ -16,4 +19,6 @@ spec:
     automated:
       selfHeal: true
       prune: true
+    syncOptions:
+      - CreateNamespace=true
 
