Update Rook-Ceph operator application to v1.15.0 with inline CSI values
- Rename application from 'ceph' to 'rook-ceph-operator'
- Update chart version from v1.14.x to v1.15.0
- Replace valueFiles with inline Helm values for CSI drivers
- Ensure operator is installed before cluster deployment

--- a/clusters/prod/infra/ceph.yaml
+++ b/clusters/prod/infra/ceph.yaml
@@ -1,24 +1,26 @@
 apiVersion: argoproj.io/v1alpha1
 kind: Application
 metadata:
-  name: ceph
+  name: rook-ceph-operator
   namespace: argocd
 spec:
   project: default
   source:
     repoURL: https://charts.rook.io/release
     chart: rook-ceph
-    targetRevision: v1.14.x
+    targetRevision: v1.15.0
     helm:
-      valueFiles:
-        - ../../../infra/ceph/rook-values.yaml
+      values: |
+        csi:
+          enableRbdDriver: true
+          enableCephfsDriver: true
   destination:
     namespace: rook-ceph
     server: https://kubernetes.default.svc
   syncPolicy:
     automated:
-      selfHeal: true
       prune: true
+      selfHeal: true
     syncOptions:
       - CreateNamespace=true
 
