--- a/.gitignore
+++ b/.gitignore
@@ -33,17 +33,25 @@ Thumbs.db
 !infra/ceph/
 !infra/ceph/**
 
+# Keep all vault-related files
+!clusters/prod/infra/vault.yaml
+!infra/vault/
+!infra/vault/**
+
 # Ignore all other infrastructure applications
 clusters/prod/infra/*.yaml
 !clusters/prod/infra/ceph*.yaml
+!clusters/prod/infra/vault.yaml
 
 # Ignore all application applications
 clusters/prod/apps/
 
-# Ignore all infrastructure configs except ceph
+# Ignore all infrastructure configs except ceph and vault
 infra/*
 !infra/ceph/
 !infra/ceph/**
+!infra/vault/
+!infra/vault/**
 
 # Ignore all application configs
 apps/
