--- a/clusters/prod/infra/vault.yaml
+++ b/clusters/prod/infra/vault.yaml
@@ -6,7 +6,7 @@ metadata:
 spec:
   project: default
   source:
-    repoURL: "oci://registry-1.docker.io/hashicorp/vault"
+    repoURL: "oci://ghcr.io/hashicorp/vault"
     chart: vault
     targetRevision: "0.28.0"
     helm:
