--- a/clusters/prod/infra/vault.yaml
+++ b/clusters/prod/infra/vault.yaml
@@ -6,21 +6,18 @@ metadata:
 spec:
   project: default
   source:
-    repoURL: "oci://ghcr.io/hashicorp/vault"
+    repoURL: https://charts.bitnami.com/bitnami
     chart: vault
-    targetRevision: "0.28.0"
+    targetRevision: 9.1.4
     helm:
       valueFiles:
         - infra/vault/values.yaml
   destination:
-    namespace: vault
     server: https://kubernetes.default.svc
+    namespace: vault
   syncPolicy:
     automated:
-      selfHeal: true
       prune: true
+      selfHeal: true
     syncOptions:
       - CreateNamespace=true
-      - ApplyOutOfSyncOnly=true
-      - ServerSideApply=true
-
