--- a/clusters/prod/infra/vault.yaml
+++ b/clusters/prod/infra/vault.yaml
@@ -6,15 +6,15 @@ metadata:
 spec:
   project: default
   source:
-    repoURL: oci://registry-1.docker.io/bitnamicharts
+    repoURL: "https://charts.bitnami.com/bitnami"
     chart: vault
-    targetRevision: "0.28.0"
+    targetRevision: "1.9.0"
     helm:
       valueFiles:
         - infra/vault/values.yaml
   destination:
-    server: https://kubernetes.default.svc
     namespace: vault
+    server: https://kubernetes.default.svc
   syncPolicy:
     automated:
       prune: true
