--- a/clusters/prod/infra/vault.yaml
+++ b/clusters/prod/infra/vault.yaml
@@ -5,13 +5,16 @@ metadata:
   namespace: argocd
 spec:
   project: default
-  source:
-    repoURL: "https://charts.bitnami.com/bitnami"
-    chart: vault
-    targetRevision: "1.9.0"
-    helm:
-      valueFiles:
-        - infra/vault/values.yaml
+  sources:
+    - repoURL: "https://charts.bitnami.com/bitnami"
+      chart: vault
+      targetRevision: "1.9.0"
+      helm:
+        valueFiles:
+          - $values/infra/vault/values.yaml
+    - repoURL: https://github.com/Murtadah-1984/k8sgitops.git
+      targetRevision: main
+      ref: values
   destination:
     namespace: vault
     server: https://kubernetes.default.svc
