--- a/.gitignore
+++ b/.gitignore
@@ -38,20 +38,28 @@ Thumbs.db
 !infra/vault/
 !infra/vault/**
 
+# Keep all kong-related files
+!clusters/prod/infra/kong.yaml
+!infra/kong/
+!infra/kong/**
+
 # Ignore all other infrastructure applications
 clusters/prod/infra/*.yaml
 !clusters/prod/infra/ceph*.yaml
 !clusters/prod/infra/vault.yaml
+!clusters/prod/infra/kong.yaml
 
 # Ignore all application applications
 clusters/prod/apps/
 
-# Ignore all infrastructure configs except ceph and vault
+# Ignore all infrastructure configs except ceph, vault, and kong
 infra/*
 !infra/ceph/
 !infra/ceph/**
 !infra/vault/
 !infra/vault/**
+!infra/kong/
+!infra/kong/**
 
 # Ignore all application configs
 apps/
