--- a/infra/kong/values.yaml
+++ b/infra/kong/values.yaml
@@ -20,8 +20,12 @@ proxy:
   enabled: true
 
 env:
+  database: "postgres"
   trusted_ips: 0.0.0.0/0
   real_ip_header: "X-Forwarded-For"
+
+postgresql:
+  enabled: true
 
 resources:
   limits:
