--- a/.gitignore
+++ b/.gitignore
@@ -43,16 +43,22 @@ Thumbs.db
 !infra/kong/
 !infra/kong/**
 
+# Keep all cert-manager-related files
+!clusters/prod/infra/cert-manager.yaml
+!infra/cert-manager/
+!infra/cert-manager/**
+
 # Ignore all other infrastructure applications
 clusters/prod/infra/*.yaml
 !clusters/prod/infra/ceph*.yaml
 !clusters/prod/infra/vault.yaml
 !clusters/prod/infra/kong.yaml
+!clusters/prod/infra/cert-manager.yaml
 
 # Ignore all application applications
 clusters/prod/apps/
 
-# Ignore all infrastructure configs except ceph, vault, and kong
+# Ignore all infrastructure configs except ceph, vault, kong, and cert-manager
 infra/*
 !infra/ceph/
 !infra/ceph/**
@@ -60,6 +66,8 @@ infra/*
 !infra/vault/**
 !infra/kong/
 !infra/kong/**
+!infra/cert-manager/
+!infra/cert-manager/**
 
 # Ignore all application configs
 apps/
