--- a/.gitignore
+++ b/.gitignore
@@ -38,26 +38,36 @@ Thumbs.db
 !infra/vault/
 !infra/vault/**
 
-# Ignore kong, cert-manager
-clusters/prod/infra/kong.yaml
-clusters/prod/infra/cert-manager.yaml
-infra/kong/
-infra/cert-manager/
+# Keep all kong-related files
+!clusters/prod/infra/kong.yaml
+!infra/kong/
+!infra/kong/**
+
+# Keep all cert-manager-related files
+!clusters/prod/infra/cert-manager.yaml
+!infra/cert-manager/
+!infra/cert-manager/**
 
 # Ignore all other infrastructure applications
 clusters/prod/infra/*.yaml
 !clusters/prod/infra/ceph*.yaml
 !clusters/prod/infra/vault.yaml
+!clusters/prod/infra/kong.yaml
+!clusters/prod/infra/cert-manager.yaml
 
 # Ignore all application applications
 clusters/prod/apps/
 
-# Ignore all infrastructure configs except ceph and vault
+# Ignore all infrastructure configs except ceph, vault, kong, and cert-manager
 infra/*
 !infra/ceph/
 !infra/ceph/**
 !infra/vault/
 !infra/vault/**
+!infra/kong/
+!infra/kong/**
+!infra/cert-manager/
+!infra/cert-manager/**
 
 # Ignore all application configs
 apps/
