Add ceph cluster files to repository

--- a/.gitignore
+++ b/.gitignore
@@ -24,10 +24,17 @@ Thumbs.db
 # ArgoCD
 .argocd/
 
-# Ignore everything except argocd-root.yaml
+# Ignore everything except argocd-root.yaml and ceph
 *
 !clusters/
 clusters/*
 !clusters/prod/
 clusters/prod/*
 !clusters/prod/argocd-root.yaml
+!clusters/prod/infra/
+clusters/prod/infra/*
+!clusters/prod/infra/ceph*.yaml
+!infra/
+infra/*
+!infra/ceph/
+infra/ceph/**
