--- a/infra/ceph/rook-ceph-cluster/values.yaml
+++ b/infra/ceph/rook-ceph-cluster/values.yaml
@@ -6,6 +6,8 @@ cephCluster:
   mon:
     count: 3
     allowMultiplePerNode: false
+  mgr:
+    count: 1
   network:
     provider: host
   storage:
