Add OSD memory optimization for small RAM nodes (8GB)

--- a/infra/ceph/rook-ceph-cluster/values.yaml
+++ b/infra/ceph/rook-ceph-cluster/values.yaml
@@ -14,6 +14,11 @@ cephCluster:
       mon_osd_down_out_subtree_limit: "host"
       mon_osd_min_down_reporter: "1"
       mon_clock_drift_allowed: "2"
+    osd:
+      osd_memory_target: "2G"
+      osd_memory_base: "1G"
+      osd_memory_cache_min: "128M"
+      bluestore_cache_size: "512M"
   network:
     provider: host
   storage:
