Add CephFS MDS memory limit optimization (1Gi) for small RAM nodes

--- a/infra/ceph/rook-ceph-cluster/values.yaml
+++ b/infra/ceph/rook-ceph-cluster/values.yaml
@@ -113,6 +113,9 @@ cephFilesystems:
       metadataServer:
         activeCount: 1
         activeStandby: true
+        resources:
+          limits:
+            memory: 1Gi
     storageClass:
       name: rook-cephfs
       isDefault: false
