Add explicit MON node placement: k8s-ceph-mon-01, k8s-ceph-02, k8s-ceph-03

--- a/infra/ceph/rook-ceph-cluster/templates/cephcluster.yaml
+++ b/infra/ceph/rook-ceph-cluster/templates/cephcluster.yaml
@@ -11,6 +11,10 @@ spec:
   mon:
     count: {{ .Values.cephCluster.mon.count }}
     allowMultiplePerNode: {{ .Values.cephCluster.mon.allowMultiplePerNode }}
+    {{- if .Values.cephCluster.mon.nodes }}
+    nodes:
+      {{- toYaml .Values.cephCluster.mon.nodes | nindent 6 }}
+    {{- end }}
   {{- if .Values.cephCluster.mgr }}
   mgr:
     {{- toYaml .Values.cephCluster.mgr | nindent 4 }}
