--- a/infra/ceph/rook-ceph-cluster/values.yaml
+++ b/infra/ceph/rook-ceph-cluster/values.yaml
@@ -9,6 +9,10 @@ cephCluster:
   mon:
     count: 3
     allowMultiplePerNode: false
+    nodes:
+      - name: k8s-ceph-mon-01
+      - name: k8s-ceph-02
+      - name: k8s-ceph-03
   mgr:
     count: 1
     # Disable expensive MGR modules to save ~1.5GB RAM
