--- a/.gitignore
+++ b/.gitignore
@@ -24,7 +24,7 @@ Thumbs.db
 # ArgoCD
 .argocd/
 
-# Ignore everything except argocd-root.yaml and ceph
+# Ignore everything except argocd-root.yaml
 *
 !clusters/
 clusters/*
@@ -33,8 +33,7 @@ clusters/prod/*
 !clusters/prod/argocd-root.yaml
 !clusters/prod/infra/
 clusters/prod/infra/*
-!clusters/prod/infra/ceph*.yaml
 !infra/
 infra/*
-!infra/ceph/
-infra/ceph/**
+infra/ceph/
+clusters/prod/infra/ceph*.yaml
