Re-add ceph files for deployment with optimized settings

--- a/.gitignore
+++ b/.gitignore
@@ -24,7 +24,7 @@ Thumbs.db
 # ArgoCD
 .argocd/
 
-# Ignore everything except argocd-root.yaml
+# Ignore everything except argocd-root.yaml and ceph
 *
 !clusters/
 clusters/*
@@ -33,7 +33,8 @@ clusters/prod/*
 !clusters/prod/argocd-root.yaml
 !clusters/prod/infra/
 clusters/prod/infra/*
+!clusters/prod/infra/ceph*.yaml
 !infra/
 infra/*
-infra/ceph/
-clusters/prod/infra/ceph*.yaml
+!infra/ceph/
+infra/ceph/**
