Add namespace selector to control-plane-pool for kube-system

--- a/infra/metallb/values.yaml
+++ b/infra/metallb/values.yaml
@@ -11,6 +11,9 @@ configInline:
       protocol: layer2
       addresses:
         - 10.0.20.100-10.0.20.200  # MetalLB IP pool (excludes control plane IPs 10.0.20.11-13)
+      namespaceSelectors:
+        - matchLabels:
+            name: kube-system
 
 # Controller configuration
 controller:
