Add global security configuration to allow insecure images in MetalLB

--- a/infra/metallb/values.yaml
+++ b/infra/metallb/values.yaml
@@ -10,6 +10,11 @@
 # MetalLB L2 Mode - Corrected Bitnami Helm Values
 # -------------------------------------------------------------------
 
+# Global configuration
+global:
+  security:
+    allowInsecureImages: true
+
 # IP Address Pool - assigns LoadBalancer IPs
 # Note: Address pools are managed via CRDs (IPAddressPool), not configInline
 config:
