--- a/infra/keepalived/keepalived-incluster.yaml
+++ b/infra/keepalived/keepalived-incluster.yaml
@@ -48,18 +48,19 @@ spec:
               - NET_BROADCAST
               - NET_RAW
               - SYS_TIME
-        args: ["--dont-daemonize"]   # 🔥 KEY FIX FOR CRASHLOOP
         env:
         - name: KEEPALIVED_INTERFACE
-          value: "eno1.20"
+          value: "eno1.20"                    # 🔁 Your VLAN 20 interface
+        - name: KEEPALIVED_VIRTUAL_IPS
+          value: "10.0.20.10/24"              # 🔁 Your Control Plane VIP
+        - name: KEEPALIVED_ROUTER_ID
+          value: "LVS_KUBERNETES"
         - name: KEEPALIVED_PASSWORD
           value: "CP_VipSecret"
         - name: KEEPALIVED_VIRTUAL_ROUTER_ID
           value: "51"
-        - name: KEEPALIVED_VIRTUAL_IPS
-          value: "10.0.20.10/24"
         - name: KEEPALIVED_PRIORITY
-          value: "100"
+          value: "100"                        # Same on all nodes; highest IP wins
         livenessProbe:
           exec:
             command: ["pgrep","keepalived"]
