--- a/infra/keepalived/keepalived-incluster.yaml
+++ b/infra/keepalived/keepalived-incluster.yaml
@@ -48,6 +48,7 @@ spec:
               - NET_BROADCAST
               - NET_RAW
               - SYS_TIME
+        args: ["--dont-daemonize"]   # 🔥 KEY FIX FOR CRASHLOOP
         env:
         - name: KEEPALIVED_INTERFACE
           value: "eno1.20"                    # 🔁 Your VLAN 20 interface
